--- a/.github/workflows/push-image.yml
+++ b/.github/workflows/push-image.yml
@@ -1,9 +1,7 @@
 name: Publish image to Docker Hub
-ame: Publish Docker Image to Docker Hub
-
 on:
   push:
-    branches: ['master']
+    branches: ['main']
 
 jobs:
   build:
@@ -18,8 +16,10 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
+
       - name: Build the Docker image
-        run: docker build . --file Dockerfile --tag ${{ secrets.DOCKER_USERNAME }}/express-typescript-docker
+        run: docker build . --file Dockerfile --tag ${{ secrets.DOCKER_USERNAME }}/django_cicd
 
       - name: Docker Push
-        run: docker push ${{ secrets.DOCKER_USERNAME }}/express-typescript-docker
+        run: docker push ${{ secrets.DOCKER_USERNAME }}/django_cicd
+        
